<resources>
    <string name="app_name">Example</string>
    <string name="order_value">Order Value:</string>
    <string name="shipped_shield">Shipped Shield</string>
    <string name="shipped_shield_info">Package Assurance for unexpected issues</string>
    <string name="display_learn_more_model">Display Learn More Model</string>
    <string name="send_shield_fee_request">Send Shield Fee Request</string>
    <string name="learn_more">Learn More</string>
</resources>